CREATE TABLE [servicios].[servicio]
(
	[idServicio] INT IDENTITY(1,1) NOT NULL, --PK AUTOINCREMENTAL
	[nombre] NVARCHAR(200) NOT NULL,
	[acronimo] NVARCHAR(50),
	[comentario] NVARCHAR(1000),
	[rowversion] [timestamp] NOT NULL,
	CONSTRAINT [PK_Servicio] PRIMARY KEY CLUSTERED ([idServicio] ASC)
	 WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, 
          ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON, OPTIMIZE_FOR_SEQUENTIAL_KEY = OFF)
    ON [PRIMARY]
) ON [PRIMARY]
GO
